aggiustato i test in team e aggiunto commenti in tutti test